--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</li>
 		
 		<li class="dropdown2">
-			<a class="dropbtn2">Things To Do</a>
+			<a class="dropbtn2">Activities</a>
 			<div class="dropdown-content2">
 				<a href="#">Eat</a>
 				<a href="#">Travel</a>
@@ -48,8 +48,8 @@
 		<li class="dropdown4">
 			<a class="dropbtn4">Misc.</a>
 			<div class="dropdown-content4">
-				<a href="#">Photo Gallery</a>
-				<a href="#">Bibliography</a>
+				<a href="photo-gallery.html">Photo Gallery</a>
+				<a href="bibliography.html">Bibliography</a>
 			</div>
 		</li>
 	</ul>
