--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -4,14 +4,24 @@
 	
 	<meta charset="utf-8">
 	<title>Photo Gallery</title>
-	<link rel="stylesheet" href="misc/photo-gallery.css">
-	<link rel="icon" type="image/x-icon" href="images/mountain.svg">
+	<link rel="stylesheet" href="photo-gallery.css">
+	<link rel="icon" type="image/x-icon" href="mountain.svg">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
+	<a href="index.html" style="text-decoration: none; color: black;">
+		<h1 style="text-align: center; font-size: 50px;">
+			<img src="mountain.svg" class="mountain-logo">
+			&#160;&#160;North Vancouver &#160;&#160;
+			<img src="mountain.svg" class="mountain-logo">
+		</h1>
+	</a>
+	
 	<ul>
 		<li><a href="home/index.html">Home</a></li>
 		<li class="dropdown1">
@@ -24,7 +34,7 @@
 		</li>
 		
 		<li class="dropdown2">
-			<a class="dropbtn2">Things To Do</a>
+			<a class="dropbtn2">Activities</a>
 			<div class="dropdown-content2">
 				<a href="#">Eat</a>
 				<a href="#">Travel</a>
@@ -40,10 +50,60 @@
 		<li class="dropdown4">
 			<a class="dropbtn4">Misc.</a>
 			<div class="dropdown-content4">
-				<a href="misc/photo-gallery.html">Photo Gallery</a>
-				<a href="#">Bibliography</a>
+				<a href="photo-gallery.html">Photo Gallery</a>
+				<a href="bibliography.html">Bibliography</a>
 			</div>
 		</li>
 	</ul>
+	
+	<div class="gallery">
+		<a target="_blank" href="lynn-canyon-park.jpg">
+			<img src="lynn-canyon-park.jpg">
+		</a>
+		<div class="desc">Lynn Cannon Park</div>
+	</div>
+	
+	<div class="gallery">
+		<a target="_blank" href="deep-cove.jpg">
+			<img src="deep-cove.jpg">
+		</a>
+		<div class="desc">Deep Cove Marina</div>
+	</div>
+	
+	<div class="gallery">
+		<a target="_blank" href="lynn-canyon-bridge.jpg">
+			<img src="lynn-canyon-bridge.jpg">
+		</a>
+		<div class="desc">Lynn Canyon Bridge</div>
+	</div>
+	
+	
+	<div class="gallery">
+		<a target="_blank" href="cleaveland-dam.jpg">
+			<img src="cleaveland-dam.jpg">
+		</a>
+		<div class="desc">Cleaveland Dam</div>
+	</div>
+	
+	<div class="gallery">
+		<a target="_blank" href="lynn-canyon-ecology-centre.jpg">
+			<img src="lynn-canyon-ecology-centre.jpg">
+		</a>
+		<div class="desc">Lynn Valley Ecology Center</div>
+	</div>
+	
+	<div class="gallery-near-footer">
+		<a target="_blank" href="my-clouds.jpg">
+			<img src="my-clouds.jpg">
+		</a>
+		<div class="desc">North Van Clouds From My House</div>
+	</div>
+	
+	<footer id="footer">Created by Mischa Potter - All photos taken from "Best Free Things to Do in North Vancouver" by Tripadvisor</footer>
 </body>
 </html>
+
+
+
+
+
