--- a/lynn-valley.html
+++ b/lynn-valley.html
@@ -32,7 +32,7 @@
 		</li>
 		
 		<li class="dropdown2">
-			<a class="dropbtn2">Things To Do</a>
+			<a class="dropbtn2">Activities</a>
 			<div class="dropdown-content2">
 				<a href="#">Eat</a>
 				<a href="#">Travel</a>
@@ -48,15 +48,18 @@
 		<li class="dropdown4">
 			<a class="dropbtn4">Misc.</a>
 			<div class="dropdown-content4">
-				<a href="#">Photo Gallery</a>
-				<a href="#">Bibliography</a>
+				<a href="photo-gallery.html">Photo Gallery</a>
+				<a href="bibliography.html">Bibliography</a>
 			</div>
 		</li>
 	</ul>
 	
 	<h1 id="title">Lynn Valley</h1>
+	
+	<hr>
+	
 	<p id="lynnvalley-text">
-		<img src="lynn-valley.png" alt="An overview map image of North Vancouver with the Lynn Valley section raised and highlighted in orange." style="float: left;">	
+		<img src="lynn-valley.png" alt="An overview map image of North Vancouver with the Lynn Valley section raised and highlighted in orange." style="float: left; border-radius: 100px; margin: 0px 20px 20px 0px">	
 		Home to some of our most visited recreational areas and celebrated for its mountain village charm, Lynn Valley is one of the District’s longest-established neighbourhoods.
 		<br>
 		<br>
@@ -64,6 +67,7 @@
 		<br>
 		<br>
 		This community includes the neighbourhoods of Upper Lynn, Upper West Lynn, Lower West Lynn, Valley Centre, Central Lynn, Lynn Canyon, West Lynn Terrace, Boundary, and Kirkstone. Lynn Valley is one of the District’s new town centres and the community’s central hub is undergoing a major transformation into a vibrant residential and commercial core for the area.
+	
 	</p>
 	
 	<footer id="footer">Created by Mischa Potter</footer>
