--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -23,7 +23,7 @@
 	</a>
 	
 	<ul>
-		<li><a href="home/index.html">Home</a></li>
+		<li><a href="index.html">Home</a></li>
 		<li class="dropdown1">
 			<a class="dropbtn1">Places</a>
 			<div class="dropdown-content1">
