--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -27,8 +27,8 @@
 		<li class="dropdown1">
 			<a class="dropbtn1">Places</a>
 			<div class="dropdown-content1">
-				<a href="places/lonsdale-quay.html">Lonsdale Quay</a>
-				<a href="places/lynn-valley.html">Lynn Valley</a>
+				<a href="lonsdale-quay.html">Lonsdale Quay</a>
+				<a href="lynn-valley.html">Lynn Valley</a>
 				<a href="#">The Mountains</a>
 			</div>
 		</li>
