--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
 	<a href="index.html" style="text-decoration: none; color: black;">
 		<h1 style="text-align: center; font-size: 50px;">
-			<img src="mountain.svg" class="mountain-logo">
+			<img src="mountain.svg" class="mountain-logo" alt="a mountain icon in black and white">
 			&#160;&#160;North Vancouver &#160;&#160;
-			<img src="mountain.svg" class="mountain-logo">
+			<img src="mountain.svg" class="mountain-logo" alt="a mountain icon in black and white">
 		</h1>
 	</a>
 		
@@ -57,8 +57,22 @@
 
 	<h1 id="title">North Vancouver</h1>
 	
-	<p id="home-text"><img src="north-vancouver.jpg" id="home-img" alt="North Vancouver waterline with North Van mountains in the background.">&nbsp; &nbsp; The City of North Vancouver is a city on the north shore of Burrard Inlet, British Columbia, Canada. It is the smallest in area and the most urbanized of the North Shore municipalities. Although it has significant industry of its own – including shipping, chemical production, and film production – the city is considered to be a suburb of Vancouver. The city is served by the Royal Canadian Mounted Police, British Columbia Ambulance Service, and the North Vancouver City Fire Department. </p>
+	<p class="home-text"><img src="north-vancouver.jpg" id="home-img" alt="North Vancouver waterline with North Van mountains in the background.">&nbsp; &nbsp; The <span style="text-decoration: underline">City of North Vancouver</span> is a city on the North Shore of Burrard Inlet, British Columbia, Canada. It is the smallest in area and the most urbanized of the North Shore municipalities. Although it has significant industry of its own – including shipping, chemical production, and film production – the city is considered to be a suburb of Vancouver. The city is served by the Royal Canadian Mounted Police, British Columbia Ambulance Service, and the North Vancouver City Fire Department. </p>
 	
+	<p class="home-text">&nbsp; &nbsp;Personally, I live on the North Shore, so making a website about North Vancouver means a lot to me!</p>
+	
+	<div id="line"></div>
+	
+	<div class="map-positioning">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20807.637086754068!2d-123.09098451982656!3d49.31514274606881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54867046f9232b41%3A0x6f85cb4bd4fbec5a!2sNorth%20Vancouver%2C%20BC!5e0!3m2!1sen!2sca!4v1686777395834!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="embed-map"></iframe>
+		<p id="map-text">Here is an interactive map of North Vancouver. It includes some key places, such as Lynn Valley, Lower Lonsdale, and Upper Lonsdale.
+		<br>
+		<br>
+		To zoom in and out, hold Ctrl and then scroll with the mouse wheel. Click and drag around to look on the map.
+		</p>
+
+	</div>
+		
 	<footer id="footer">Created by Mischa Potter</footer>
 </body>
 </html>
