--- a/lonsdale-quay.html
+++ b/lonsdale-quay.html
@@ -14,9 +14,9 @@
 	
 	<a href="index.html" style="text-decoration: none; color: black;">
 		<h1 style="text-align: center; font-size: 50px;">
-			<img src="mountain.svg" class="mountain-logo">
+			<img src="mountain.svg" class="mountain-logo" alt="a mountain icon in black and white">
 			&#160;&#160;North Vancouver &#160;&#160;
-			<img src="mountain.svg" class="mountain-logo">
+			<img src="mountain.svg" class="mountain-logo" alt="a mountain icon in black and white">
 		</h1>
 	</a>
 		
@@ -63,15 +63,15 @@
 	<br>
 	The Quay is a place that brings the community and visitors together to interact and share experiences; to explore, enjoy and learn about locally made food, drink and products in a fun, vibrant setting. Over the years, The Quay has evolved into a curated culinary destination for those seeking fresh, local and unique foods. The Quay features fantastic local vendors, artisans, entertainers and retailers.</p>
 	
-	<hr id="disappear">
 	<hr>
+	
 	<div class="quay-images">
 		<img src="lonsdale-quay-map-img.PNG" alt="A screenshot of where Lonsdale Quay is on Google Maps" class="border">
 		<img src="lonsdale-quay-waterfront.png" alt="Looking out at Vancouver from Lonsdale Quay." class="border">
 	</div>
 	
 	<div class="desc">
-		<p>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Lonsdale Quay on Google Maps.</p>
+		<p>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Lonsdale Quay on Google Maps.&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</p>
 		<div>
 			<p>Looking out at Vancouver from Lonsdale Quay.</p>
 		</div>
