--- a/lynn-valley.html
+++ b/lynn-valley.html
@@ -14,9 +14,9 @@
 	
 	<a href="index.html" style="text-decoration: none; color: black;">
 		<h1 style="text-align: center; font-size: 50px;">
-		  <img src="mountain.svg" class="mountain-logo">
+		  <img src="mountain.svg" class="mountain-logo" alt="a mountain icon in black and white">
 			&#160;&#160;North Vancouver &#160;&#160;
-		  <img src="mountain.svg" class="mountain-logo">
+		  <img src="mountain.svg" class="mountain-logo" alt="a mountain icon in black and white">
 		</h1>
 	</a>
 	
