--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -16,9 +16,9 @@
 <body>
 	<a href="index.html" style="text-decoration: none; color: black;">
 		<h1 style="text-align: center; font-size: 50px;">
-			<img src="mountain.svg" class="mountain-logo">
+			<img src="mountain.svg" class="mountain-logo" alt="a mountain icon in black and white">
 			&#160;&#160;North Vancouver &#160;&#160;
-			<img src="mountain.svg" class="mountain-logo">
+			<img src="mountain.svg" class="mountain-logo" alt="a mountain icon in black and white">
 		</h1>
 	</a>
 	
@@ -98,6 +98,16 @@
 		</a>
 		<div class="desc">North Van Clouds From My House</div>
 	</div>
+	
+	<div class="gallery-near-footer">
+		<a target="_blank" href="my-backyard.jpg">
+			<img src="my-backyard.jpg">
+		</a>
+		<div class="desc">A Rainbow in My Backyard</div>
+	</div>
+	
+	<p>&#160;</p>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	
 	<footer id="footer">Created by Mischa Potter - All photos taken from "Best Free Things to Do in North Vancouver" by Tripadvisor</footer>
 </body>
