--- a/lynn-valley.html
+++ b/lynn-valley.html
@@ -59,7 +59,7 @@
 	<hr>
 	
 	<p id="lynnvalley-text">
-		<img src="lynn-valley.png" alt="An overview map image of North Vancouver with the Lynn Valley section raised and highlighted in orange." style="float: left; border-radius: 100px; margin: 0px 20px 20px 0px">	
+		<img src="lynn-valley.png" alt="An overview map image of North Vancouver with the Lynn Valley section raised and highlighted in orange." id="lynn-valley-img">	
 		Home to some of our most visited recreational areas and celebrated for its mountain village charm, Lynn Valley is one of the District’s longest-established neighbourhoods.
 		<br>
 		<br>
@@ -68,7 +68,10 @@
 		<br>
 		This community includes the neighbourhoods of Upper Lynn, Upper West Lynn, Lower West Lynn, Valley Centre, Central Lynn, Lynn Canyon, West Lynn Terrace, Boundary, and Kirkstone. Lynn Valley is one of the District’s new town centres and the community’s central hub is undergoing a major transformation into a vibrant residential and commercial core for the area.
 	
+		<img src="cat-ad.png" id="cat-ad">
 	</p>
+	
+	
 	
 	<footer id="footer">Created by Mischa Potter</footer>
 </body>
