--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -56,6 +56,9 @@
 		</li>
 	</ul>
 	
+	<h1 id="title">Photo Gallery</h1>
+
+	
 	<div class="gallery">
 		<a target="_blank" href="lynn-canyon-park.jpg">
 			<img src="lynn-canyon-park.jpg">
